# scribblz-ros

./: README.md  example_waypoints.txt  image_publisher.py  path_sim_graph_eulerian.py  publish_image.py  publish_waypoints.py  waypoints.json
src/docking_station/: CMakeLists.txt  TESTING_PATH_FOLLOWER.md  firmware_integrated.ino  package.xml  setup.cfg  setup.py  test_path_follower.sh
src/docking_station/action/: DockRobot.action  ExecuteDrawing.action
src/docking_station/docking_station/: D_coeffs.npy  K_matrix.npy  battery_monitor_node.py  camera_calib.py  dead_reckoning_odom.py  docking_action_server_node.py  drawing_action_server_node.py  drawing_control_node.py  drawing_driver_node.py  fisheye_cv_calibration.py  heartbeat_listener.py  image_to_path_node.py  ir_led_docking_node.py  lidar_pose_node.py  raspi_counter_pub.py  state_machine_node.py  teleop_node.py  test.py  test_cleaner.py  udp_command_sender.py  verificationforimgaes.py  waypoint_publisher_node.py
src/docking_station/docking_station/drawing/: __init__.py  image_processor.py  kinematics.py  path_follower.py  path_publisher.py  test_positive_xy_drive.py  tether_controller.py
src/docking_station/docking_station/lidar/: __init__.py  circle_fitter.py  lidar_node.py  lidar_processor.py  packet_parser.py
src/docking_station/launch/: system_launch.py
src/docking_station/log/: latest_build
src/docking_station/msg/: BatteryStatus.msg  DrawingPath.msg
src/docking_station/srv/: SetRobotState.srv
src/docking_station/waypoints/: drawing_path.json  enter_docking_station.json  undocking_path.json
(+12 files in other folders)
